# latency-monitor

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  grafana.json  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
latency_monitor/: dig.py  latency_monitor.py  mtr.py  routes.py  utils.py
latency_monitor/templates/: index.html
mtr_probe/: mtr_probe.py
mtr_probe/templates/: index.html
tests/: conftest.py  test_routes.py  test_tasks.py  test_utils.py
