[tool.poetry]
name = "latency-monitor"
version = "1.2.0"
description = "logs latency to/of the specified targets and stores them in influxdb"
authors = ["Turbo <dev@turbo.ooo>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
Flask = "^3.0.0"
celery = { extras = ["redis"], version = "^5.3.1" }
redis = "^7.0.0"
gunicorn = "^23.0.0"
influxdb-client = "^1.37.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
