[project]
name = "latency-monitor"
version = "1.2.0"
description = "logs latency to/of the specified targets and stores them in influxdb"
authors = [{ name = "Turbo", email = "dev@turbo.ooo" }]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0.0",
    "celery[redis]>=5.3.1",
    "redis>=7.0.0",
    "gunicorn>=23.0.0",
    "influxdb-client>=1.37.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["latency_monitor"]
